--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "dependencies": {
         "css-loader": "^0.26.1",
-        "extract-text-webpack-plugin": "^1.0.1",
+        "extract-text-webpack-plugin": "2",
         "html-webpack-plugin": "^2.28.0",
         "path": "^0.12.7",
         "react": "^15.4.2",
