--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     },
     "dependencies": {
         "css-loader": "^0.26.1",
+        "eslint": "^3.15.0",
         "extract-text-webpack-plugin": "2",
         "html-webpack-plugin": "^2.28.0",
         "path": "^0.12.7",
         "react": "^15.4.2",
         "react-dom": "^15.4.2",
         "style-loader": "^0.13.1",
+        "url-loader": "^0.5.7",
         "webpack": "^2.2.1",
         "webpack-combine-loaders": "^2.0.3",
         "webpack-dev-server": "^2.3.0"
